Se agregó a .gitignore el archivo debug.log

--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Debuggin
+debug.log
+
 # End of https://www.toptal.com/developers/gitignore/api/windows
